--- a/cassio/advanced.css
+++ b/cassio/advanced.css
@@ -1,12 +1,23 @@
+.navbar-header{
+    height: 50px;
+}
+
 #advanced-menu{
     display: block;
-    background-color: #f00;
-    margin-top: 120px;
+    width: 600px;
+    margin-top: 50px;
     font-size: 20px;
-    color: #fff;
-    padding: 1px 20px 20px 20px;
+    padding: 1px 40px 20px 20px;
+}
+
+.col-lg-6{
+    width: 95%;
+}
+
+.btn-active {
+    background: #cc0717;
 }
 
 input[type="checkbox"] {
-  margin-right: 20px;
+  margin-right: 5px;
 }
