--- a/sid/StyleSheet.css
+++ b/sid/StyleSheet.css
@@ -2,6 +2,8 @@ body {
   padding-top: 40px;
   padding-bottom: 40px;
   background-color: #eee;
+  font-family: 'Open Sans', sans-serif;
+  font-weight: 400;/* where XXX is the number (400, 300, 600) */
 }
 
 .form-signin {
@@ -9,9 +11,13 @@ body {
   padding: 15px;
   margin: 0 auto;
 }
-.form-signin .form-signin-heading,
 .form-signin .checkbox {
   margin-bottom: 10px;
+}
+
+.form-signin .form-signin-heading{
+  margin-bottom: 10px;
+  text-align: center;
 }
 .form-signin .checkbox {
   font-weight: normal;
@@ -37,4 +43,9 @@ body {
   margin-bottom: 10px;
   border-top-left-radius: 0;
   border-top-right-radius: 0;
+}
+
+#name
+{
+  position:center;
 }
