--- a/cassio/advanced.css
+++ b/cassio/advanced.css
@@ -1,13 +1,13 @@
-head, body{
+head, body {
     font-family: 'Open Sans', Arial, sans-serif;
     color: #000;
 }
 
-.navbar-header{
+.navbar-header {
     height: 50px;
 }
 
-#advanced-menu{
+#advanced-menu {
     display: block;
     width: 600px;
     margin-top: -10px;
@@ -15,18 +15,44 @@ head, body{
     padding: 1px 40px 20px 20px;
 }
 
-#advanced-menu h1{
+#advanced-menu h1 {
     font-weight: bold;
 }
 
-.col-lg-6{
+.col-lg-6 {
     width: 95%;
 }
 
-.btn-active {
-    background: #cc0717;
+input[type="checkbox"] {
+    margin-right: 5px;
 }
 
-input[type="checkbox"] {
-  margin-right: 5px;
+input[type="radio"]:checked {
+    background-color: #0f0;
+}
+
+.input-group-addon, .btn-primary {
+    color: #000;
+}
+
+.btn-primary {
+    background-color: #eee;
+    border-color: #ccc;
+}
+
+.btn-primary.active, .btn-primary:hover, .btn-primary:focus {
+    color: #fff;
+    background-color: #bd3947;
+    border-color: #3e0007;
+}
+
+.btn-lg {
+    color: #fff;
+    background-color: #71000c;
+    border-color: #000;
+}
+
+.btn-lg:hover, .btn-lg:focus, .btn-lg.active {
+    background-color: #bd0014;
+    border-color: #3e0007;
 }
