--- a/allen/card.css
+++ b/allen/card.css
@@ -2,21 +2,59 @@
 	box-sizing: border-box;
 }
 
-.recipe-listing {
-	display: block;
+.recipe-listing-wrapper {
 	width: 100%;
-	padding: 10px 10px;
+	margin-top: 20px;
+}
+
+.recipe-listing-inner-wrapper {
+	margin: auto;
+	padding: 0 10px 0 30px;
+	text-align: center;
+}
+
+.recipe-listing {
+	display: inline-block;
+	list-style: none;
+	margin: 0;
+	padding: 0;
+	text-align: left;
 	font-size: 0;
+}
+
+@media (min-width: 1201px) {
+	.recipe-listing {
+		width: 1125px;
+	}
+}
+ 
+@media (min-width: 768px) and (max-width: 1200px) {
+	.recipe-listing {
+		width: 750px;
+	}
+}
+ 
+@media (min-width: 481px) and (max-width: 767px) {
+	.recipe-listing {
+		width: 375px;
+	}
+}
+ 
+@media (max-width: 480px) {
+	.recipe-listing {
+		width: 375px;
+	}
 }
 
 .recipe-card {
 	display: inline-block;
+	list-style: none;
 	width: 350px;
 	height: 350px;
-	margin: 0 20px 20px 0;
-	border: 2px solid #ddd;
-	list-style: none;
+	margin: 0 25px 25px 0;
+	border: 2px solid #bbb;
 	vertical-align: top;
+	text-align: left;
 	font-size: 14px;
 }
 
@@ -34,6 +72,7 @@
 	height: 30%;
 	padding: 10px;
 	border-top: 0px;
+	background-color: white;
 	overflow: hidden;
 }
 
