--- a/cassio/userpage.css
+++ b/cassio/userpage.css
@@ -30,13 +30,16 @@ head, body {
 }
 
 #user-info, #about-me {
-    background-color: #cdcdef;
+    color: #fff;
+    background-color: #bd3947;
+    width: 104.6%;
 }
 
 #user-info{
     padding-top: 20px;
     padding-left: 10px;
     padding-bottom: 10px;
+    padding-right: 20px;
 }
 
 #user-info ul {
