--- a/cassio/userpage.css
+++ b/cassio/userpage.css
@@ -16,9 +16,8 @@ head, body {
 }
 
 #user-image {
-    width: 20%;
-    margin-left: 40%;
-    margin-right: 40%;
+    width: 200px;
+    margin-left: 39.8%;
 }
 
 #user-page h1, h2 {
