--- a/allen/card.css
+++ b/allen/card.css
@@ -9,7 +9,7 @@
 
 .recipe-listing-inner-wrapper {
 	margin: auto;
-	padding: 0 10px 0 30px;
+	padding: 0 10px 0 35px;
 	text-align: center;
 }
 
@@ -26,11 +26,17 @@
 	.recipe-listing {
 		width: 1125px;
 	}
+	.container {
+		width: 1100px;
+	}
 }
  
 @media (min-width: 768px) and (max-width: 1200px) {
 	.recipe-listing {
 		width: 750px;
+	}
+	.container {
+		width: 725px;
 	}
 }
  
@@ -38,11 +44,17 @@
 	.recipe-listing {
 		width: 375px;
 	}
+	.container {
+		width: 350px;
+	}
 }
  
 @media (max-width: 480px) {
 	.recipe-listing {
 		width: 375px;
+	}
+	.container {
+		width: 350px;
 	}
 }
 
