--- a/cassio/userpage.css
+++ b/cassio/userpage.css
@@ -58,3 +58,14 @@ head, body {
     padding-top: 30px;
     padding-bottom: 30px;
 }
+
+.btn-lg {
+    color: #fff;
+    background-color: #71000c;
+    border-color: #000;
+}
+
+.btn-lg:hover, .btn-lg:focus, .btn-lg.active {
+    background-color: #bd0014;
+    border-color: #3e0007;
+}
