--- a/will/submit.css
+++ b/will/submit.css
@@ -80,3 +80,46 @@ a {
 a:hover, a:focus {
 	color:#bd0014;
 }
+
+.recipe-diet {
+	width: 78px;
+	float: right;
+	vertical-align: top;
+	text-align: left;
+	font-size: 0;
+}
+
+.diet-icon {
+	display: inline-block;
+	width: 22px;
+	height: 22px;
+	margin: 0 0 4px 4px;
+	padding: 3px 0;
+	border-radius: 50%;
+	-moz-border-radius: 50%;
+	-webkit-border-radius: 50%;
+	text-align: center;
+	font-size: 12px;
+	font-weight: 600;
+	color: white;
+}
+
+.diet-icon.vegetarian {
+	background: #096b00;
+}
+
+.diet-icon.vegan {
+	background: #2a0;
+}
+
+.diet-icon.dairy {
+	background: #008a8a;
+}
+
+.diet-icon.kosher {
+	background: #ab9210;
+}
+
+.diet-icon.gluten {
+	background: #c46f0e;
+}
