added navbar, increased dist from navbar to text

--- a/sid/Sign-stylesheet.css
+++ b/sid/Sign-stylesheet.css
@@ -16,6 +16,7 @@ body {
 }
 
 .form-signin .form-signin-heading{
+  margin-top: 50px;
   margin-bottom: 10px;
   text-align: center;
 }
@@ -60,3 +61,4 @@ body {
   background-color:#bd0014;
   border-color:#3E0007;
 }
+
