--- a/allen/card.css
+++ b/allen/card.css
@@ -2,18 +2,18 @@
 	box-sizing: border-box;
 }
 
-.recipe-listing-wrapper {
+.listing-wrapper {
 	width: 100%;
 	margin-top: 20px;
 }
 
-.recipe-listing-inner-wrapper {
+.listing-inner-wrapper {
 	margin: auto;
 	padding: 0 0 0 25px;
 	text-align: center;
 }
 
-.recipe-listing {
+.listing {
 	display: inline-block;
 	list-style: none;
 	margin: 0;
@@ -23,25 +23,25 @@
 }
 
 @media (min-width: 1201px) {
-	.recipe-listing {
+	.listing {
 		width: 1125px;
 	}
 }
  
 @media (min-width: 801px) and (max-width: 1200px) {
-	.recipe-listing {
+	.listing {
 		width: 750px;
 	}
 }
  
 @media (min-width: 481px) and (max-width: 800px) {
-	.recipe-listing {
+	.listing {
 		width: 375px;
 	}
 }
  
 @media (max-width: 480px) {
-	.recipe-listing {
+	.listing {
 		width: 375px;
 	}
 }
@@ -84,7 +84,7 @@
 }
 
 .recipe-info-name-wrapper {
-	width: 248px; /*248px*/
+	width: 230px; /*248px*/
 	float: left;
 }
 
@@ -93,10 +93,10 @@
 }
 
 .recipe-diet {
-	width: 78px;
+	width: 96px;
 	float: right;
 	vertical-align: top;
-	text-align: left;
+	text-align: right;
 	font-size: 0;
 }
 
@@ -122,12 +122,13 @@
 
 .diet-tooltip {
 	display: none;
-	width: 135px;
+	/*width: 135px;*/
 	height: 20px;
 	float: right;
-	text-align: right;
+	padding: 0 5px;
+	text-align: center;
 	font-size: 14px;
-	color: black;
+	color: white;
 }
 
 .diet-icon.vegetarian {
