--- a/will/submit.css
+++ b/will/submit.css
@@ -153,10 +153,30 @@ a:hover, a:focus {
 	width: 200px;
 }
 
+.step-cell {
+	width: 300px;
+}
+
 #ingAdd {
 	margin-top: 20px;
 }
 
 #button-text {
 	padding-left: 10px;
+}
+
+.step-icon {
+	display: inline-block;
+	width: 22px;
+	height: 22px;
+	margin: 0 0 4px 4px;
+	padding: 3px 0;
+	border-radius: 50%;
+	-moz-border-radius: 50%;
+	-webkit-border-radius: 50%;
+	text-align: center;
+	background: #71000c;
+	font-size: 12px;
+	font-weight: 600;
+	color: white;
 }
