--- a/css/card.css
+++ b/css/card.css
@@ -1,7 +1,3 @@
-* {
-	box-sizing: border-box;
-}
-
 .listing-wrapper {
 	width: 100%;
 	margin-top: 20px;
@@ -40,16 +36,30 @@
 	}
 }
 
-.recipe-card {
+.card {
 	display: inline-block;
-	list-style: none;
 	width: 350px;
-	height: 350px;
+	list-style: none;
 	margin: 0 25px 25px 0;
 	border: 2px solid #bbb;
 	vertical-align: top;
 	text-align: left;
 	font-size: 14px;
+}
+
+
+
+
+
+
+
+
+
+
+/*****  Recipe Card  *****/
+
+.recipe.card {
+	height: 350px;
 }
 
 .recipe-info-name-wrapper a,
@@ -173,4 +183,114 @@
 
 .recipe-success .success-rate {
 	font-weight: bold;
+}
+
+
+
+
+
+
+
+
+
+
+/*****  User Card  *****/
+
+.user.card {
+	padding: 20px;
+	font-size: 0;
+}
+
+.user-info {
+	width: 100%;
+	height: 100px;
+}
+
+.user-card-img {
+	display: inline-block;
+	width: 100px;
+	height: 100px;
+	margin-left: 10px;
+}
+
+.user-card-img,
+.user-card-img * {
+	border-radius: 50%;
+	-moz-border-radius: 50%;
+	-webkit-border-radius: 50%;
+}
+
+.user-card-img *,
+.recipe-img *:not(.vcenter) {
+	display: block;
+	width: 100%;
+	height: 100%;
+	background-size: cover;
+	background-position: 50% 50%;
+}
+
+.user-stats {
+	display: inline-block;
+	margin-top: 15px;
+	margin-left: 30px;
+	vertical-align: top;
+	font-size: 14px;
+}
+
+.user-name a,
+.user-name a:hover {
+	font-size: 18px;
+	color: black;
+}
+
+.recipe-img a,
+.recipe-img a:hover {
+	text-decoration: none;
+	font-size: 16px;
+	color: black;
+}
+
+.user-recipes {
+	margin-top: 15px;
+	font-size: 0px;
+}
+
+.user-recipes-heading {
+	margin-bottom: 5px;
+	font-size: 16px;
+}
+
+.user-recipe-list {
+	display: block;
+	padding: 0;
+	list-style: none;
+}
+
+.recipe-img {
+	display: inline-block;
+	width: 50px;
+	height: 50px;
+	vertical-align: top;
+	margin-right: 5px;
+	background: white;
+}
+
+.recipe-img.more {
+	background: #bbb;
+	color: white;
+	text-align: center;
+}
+
+.vcenter {
+	display: inline-block;
+	text-overflow: ellipsis;
+	line-height: 100%;
+	height: 100%;
+}
+
+.vcenter:before {
+	content: ' ';
+	display: inline-block;
+	height: 110%;
+	vertical-align: middle;
 }
