--- a/css/recipe.css
+++ b/css/recipe.css
@@ -172,6 +172,15 @@ html, body {
 	padding-bottom: 32px;
 }
 
+.item > p {
+	display: inline-block;
+	width: 66%;
+}
+
+.carousel {
+	max-width: 600px;
+}
+
 .vote-thanks {
 	padding-top: 5px;
 	color: #27ae60;
