--- a/css/userpage.css
+++ b/css/userpage.css
@@ -59,13 +59,13 @@ head, body {
     padding-bottom: 30px;
 }
 
-.btn-lg {
+.btn-lg, .btn-lg:focus {
     color: #fff;
     background-color: #71000c;
     border-color: #000;
 }
 
-.btn-lg:hover, .btn-lg:focus, .btn-lg.active {
+.btn-lg:hover, .btn-lg.active {
     background-color: #bd0014;
     border-color: #3e0007;
 }
