--- a/css/home.css
+++ b/css/home.css
@@ -1,35 +1,38 @@
-.jumbotron{
+.jumbotron {
+	position: relative;
+	margin-bottom: 20px;
+	/*Simulated black transparency by using a linear gradient with an image under it*/
+	background: 
+		linear-gradient(rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.6)), 
+		url("../img/pasta-orig.jpg");
 	text-align: center;
 	color: #eee;
 	font-family: 'Open Sans', sans-serif;
-	font-weight: 400;/* where XXX is the number (400, 300, 600) */
-	position: relative;
+	font-weight: 400;
 	z-index: 1;
-
-	/*Simulated black transparency by using a linear gradient with an image under it*/
-	background: 
-		linear-gradient(rgba(0, 0, 0, 0.55), rgba(0, 0, 0, 0.55)), 
-		url("../img/pasta-orig.jpg");
 }
 
-.background-img{
-	width: 100%;
-	height: 100%;
-	position: absolute;
-	top: 0;
-	left: 0;
-	background-image: url("../sid/apple1.jpg");
+.jumbotron h1 {
+	margin-bottom: 25px;
+}
+
+.jumbotron .sub-heading {
+	margin-top: 0px;
+	font-size: 21px;
+	font-weight: 300;
 }
 
 .btn-primary{
+	margin-top: 35px;
+	margin-bottom: 10px;
 	background-color: #71000C;
-	border-color: black;
+	border: 1px solid black;
 }
 
 .btn-primary:hover, .btn-primary:focus, .btn-primary:active, 
 .btn-primary.active, .open>.dropdown-toggle.btn-primary {
 	background-color: #bd0014;
-	border-color: #3E0007;
+	border: 1px solid #3E0007;
 }
 
 .container {
@@ -38,4 +41,8 @@
 
 .container h2 {
 	margin: 0;
+}
+
+.section {
+	padding-top: 25px;
 }
