--- a/css/container-fix.css
+++ b/css/container-fix.css
@@ -1,3 +1,11 @@
+.container {
+	padding: 0;
+}
+
+.container h2 {
+	margin: 0;
+}
+
 @media (min-width: 1201px) {
 	.container {
 		width: 1100px;
@@ -10,17 +18,34 @@
 	}
 }
  
-@media (max-width: 800px) {
+@media (min-width: 401px) and (max-width: 800px) {
 	.container {
 		width: 350px;
 	}
 
 	.container h2 {
+		margin: auto;
+		text-align: center;
+	}
+}
+
+@media (max-width: 400px) {
+	.container {
+		width: 100%;
+	}
+
+	.container h2 {
+		margin: auto;
 		text-align: center;
 	}
 }
 
 .container h2 a,
 .container h2 a:hover {
+	margin: 0;
 	color: black;
+}
+
+.section {
+	padding-top: 25px;
 }
