--- a/css/help.css
+++ b/css/help.css
@@ -32,3 +32,13 @@
 .diet-icon.gluten {
 	background: #c46f0e;
 }
+
+img {
+	max-width: 100%;
+	height: auto;
+}
+
+.img-icon {
+	width: 25px;
+	height: 25px;
+}
